refactoring visibility part of class from public to package