@@ -4,7 +4,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -13,15 +12,15 @@ public class OrderLineService {
     private final OrderLineRepository repository;
     private final OrderLineMapper mapper;
 
-    public Integer saveOrderLine(OrderLineRequest orderLineRequest) {
+    public void saveOrderLine(OrderLineRequest orderLineRequest) {
         var orderLine = mapper.toOrderLine(orderLineRequest);
-        return repository.save(orderLine).getOrderLineId();
+        repository.save(orderLine);
     }
 
-    public List<OrderLineResponse> findByOrderId(Integer orderId) {
+    List<OrderLineResponse> findByOrderId(Integer orderId) {
         return repository.findAllByOrderId(orderId)
                 .stream()
                 .map(mapper::toOrderLineResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
